--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -129,8 +129,8 @@ nav {
 }
 
 #main_beta {
-	width:90%; margin:0 auto; min-width:1000px; min-height:580px; background:$maingray;
-	padding:20px 10px; border:1px solid #000; color:$text-color;
+	background:$maingray;
+	border:1px solid #000; color:$text-color;
 	position: relative; top: ($header-height+50);
 	
 	.actions { float:right; margin:13px 0; }
@@ -217,29 +217,6 @@ nav {
 	}
 }
 
-.alert {
-	padding:10px; margin:5px auto 10px; width:500px; text-align:center;
-	font-size:11pt;
-	a { font-weight:bold; text-decoration:underline !important; }
-
-	&.fade {
-		position:absolute; left:50%; margin:5px 0 10px -150px;
-		top:100px; z-index:20; width:300px; padding:15px 10px;
-	}
-	&.error {
-		background:#fbb; border:2px solid #c33; color:#700; 
-		a { color:#700; }
-	}
-	&.message {
-		background:#bfb; border:2px solid #3b3; color:#050;
-		a { color:#070; }
-	}
-	&.notice {
-		background:#82efff; border:2px solid #23beff; color:#006498;
-		a { color:#006498; }
-	}
-}
-
 .form2 {
 	margin:0 auto; color:$form-span;
 	
@@ -296,7 +273,7 @@ footer {
 }
 
 .album {	
-	float:left; margin:0 0 10px 0; padding:5px 15px 5px 5px; border:0; width:50%; height:162px;
+	padding:5px 15px 5px 5px; border:0; height:162px;
 	position:relative;
 	
 	.photo { position:absolute; z-index:10; }
