--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -26,10 +26,6 @@
 	);
 }
 
-body, td, th, input, textarea, select {
-	font-family:Arial,Verdana,sans-serif; font-size:10pt;
-}
-body, form, h1, h2 { margin:0; padding:0; }
 h1 {
 	font-size:12pt;
 	font-weight:bold; 
@@ -83,36 +79,26 @@ header {
 }
 
 nav {
-	margin:0; font-size:11pt; padding:0 0 0 140px; position:absolute; bottom:0;
+	margin: 0;
+	padding: 0 0 0 140px;
+	position: absolute;
+	bottom: 0;
+
 	a { color:$nav-color; padding:8px 20px; margin:0; display:block; text-decoration:none; font-weight:bold;
 		&:hover { color:$nav-hover; background:$nav-hover-bg; text-decoration:none; }
 		&.active { background:$main-bg; color:#fff; }
 		&.unread { background:#c00 url('/images/nav_unread.png') left top repeat-x; color:#fff; }
 	}
-	ul { margin:0; padding:0; line-height:100%;
-		li { margin:0; padding:0; float:left; list-style:none; }
-	}
 	.mwscc & { padding-left:22px; }
 }
 
 #babynav {
-	position: absolute; top: $header-height; left: 5%;
-	padding:10px 0 0 0; width:90%; font-size:11pt;
+	position: absolute;
+	top: $header-height;
+	left: 5%;
+	padding: 10px 0 0 0;
+	width: 90%;
 
-	ul { display:block;
-		li { float:left; margin:0 8px; list-style-type:none; }
-		a {
-			padding:7px 14px 0; font-weight:normal; color:#fff; text-decoration:none; display:block;
-			margin-top:2px; height:31px;
-			
-			&:hover { background:$babynav-hover; }
-			&.sub_active {
-				padding:8px 16px 0; background:$maingray; color:$active-color; margin:0;
-				border:1px solid #000; border-bottom:0; height:35px;
-			}
-		}
-	}
-	
 	#social-media {
 		float: right; margin-right:20px; line-height: 0;
 		a { float:left; margin:0 3px; }
@@ -184,7 +170,6 @@ nav {
 		textarea { width:100%; height:66px; }
 		.empty { padding:30px 0; text-align:center; }
 		p {
-			margin: 0; padding: 0;
 			&.photo-description {
 				background:$description-bg; border:1px solid #333; padding:8px; margin:0 0 10px 0;
 			}
@@ -347,8 +332,13 @@ table.table2 {
 	background-color:#98b5e2; border:1px solid #316ac5;
 }
 .colorbox {
-	padding:3px; position:absolute; top:-400px; left:-400px; z-index:10; 
-	background:#fff; border:1px solid #0b198c
+	padding: 3px;
+	position: absolute;
+	top: -5000px;
+	left: -5000px;
+	z-index: 10; 
+	background: #fff;
+	border:1px solid #0b198c;
 }
 .bbcolor {
 	float:left; margin:0; padding:2px; background:#fff; border:1px solid #fff; 
@@ -415,29 +405,6 @@ legend { background:$body-bg; padding:0 10px; color:#333; }
 .usermenu { border:1px solid $subheader-bg; }
 .userhov, .usermenu:hover { background:$menu-hover; border:1px solid #333; }
 .usersel, .usermenu:active { background:$menu-bg; border:1px solid #333; }
-
-ul.pagination {
-	height:26px; margin:7px 0;
-	float: right;
-
-	li {
-		list-style-type: none;
-		display: block;
-		float: left;
-	}
-	a { 
-		display:block; padding:5px 10px; height:26px;
-		background:$body-bg; text-decoration:none; text-align:center;
-		&:hover { background:#777; }
-	}
-	span {
-		height:26px; display:block; padding:5px 10px;
-	}
-	select {
-		min-width:55px; height:26px; margin:0;
-		background:$body-bg; border:1px solid #888; color:$input-color; padding-left:3px;
-	}
-}
 
 .jumpbox {
 	border:2px solid #333; background:$body-bg; padding:8px 10px; float:left; color:#000;
@@ -534,10 +501,6 @@ body.mobile {
 			&.no-margin { margin:0 -10px; }
 			.header, .body { padding-left:10px; padding-right:10px; }
 		}
-	}
-	.paginate {
-		a { width:25px; }
-		select { min-width:45px; }
 	}
 	.table2 {
 		th.icon,td.icon { width:30px;
