--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -42,7 +42,11 @@ hr {
 	height:1px; width:100%; margin:5px 0; border:0; color:#ccc; background:#999;
 }
 
-body { background:$main-bg; position: relative; }
+body {
+	padding-top: 70px;
+	background: $main-bg;
+	position: relative;
+}
 img { border:0; }
 ul, ol { margin:6px 20px; padding:0; }
 .break { width:100%; height:1px; margin:0 0 -1px; clear:both; }
@@ -78,23 +82,15 @@ header {
 	}
 }
 
-nav {
-	margin: 0;
-	padding: 0 0 0 140px;
-	position: absolute;
-	bottom: 0;
-
-	a { color:$nav-color; padding:8px 20px; margin:0; display:block; text-decoration:none; font-weight:bold;
-		&:hover { color:$nav-hover; background:$nav-hover-bg; text-decoration:none; }
-		&.active { background:$main-bg; color:#fff; }
-		&.unread { background:#c00 url('/images/nav_unread.png') left top repeat-x; color:#fff; }
+.navbar {
+	.avatar {
+		max-width: 48px;
+		max-height: 48px;
+		margin: -14px 10px -14px 0;
 	}
-	.mwscc & { padding-left:22px; }
 }
 
 #babynav {
-	position: absolute;
-	top: $header-height;
 	left: 5%;
 	padding: 10px 0 0 0;
 	width: 90%;
@@ -111,7 +107,6 @@ nav {
 	border: 1px solid #000;
 	color: $text-color;
 	position: relative;
-	top: ($header-height+50);
 
 	.actions {
 		float: right;
@@ -220,7 +215,7 @@ nav {
 }
 
 footer {
-	position: relative; top:($header-height+50);
+	position: relative;
 	padding:10px 10px 15px; text-align:center; font-size:8pt; color:#ccc; margin:0 auto; width:50%;
 	img { margin-left:13px; }
 	a { color:$footer-color; text-decoration:none; margin-left:13px;
